[gd_scene load_steps=16 format=2]

[ext_resource path="res://fdsad/Action RPG Resources/menu/Settings.gd" type="Script" id=1]
[ext_resource path="res://fdsad/Action RPG Resources/Fonts/Minecraftia-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.270588, 0.27451, 0.286275, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.270588, 0.27451, 0.286275, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=5]
Button/styles/focus = SubResource( 8 )
Button/styles/hover = SubResource( 10 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 11 )

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.270588, 0.27451, 0.286275, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.270588, 0.27451, 0.286275, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=7]
Button/styles/focus = SubResource( 9 )
Button/styles/hover = SubResource( 12 )
Button/styles/normal = SubResource( 6 )
Button/styles/pressed = SubResource( 13 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[node name="Settings" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0117647, 0.0784314, 0.172549, 0.588235 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 120.0
margin_top = 42.0
margin_right = 200.0
margin_bottom = 137.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 3 )
text = "Settings"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 80.0
margin_bottom = 32.0

[node name="Fullscreen" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 80.0
margin_bottom = 53.0
focus_neighbour_top = NodePath("../Go back")
theme = SubResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "Fullscreen"

[node name="KeyBinds" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 80.0
margin_bottom = 74.0
theme = SubResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "Keybindings"

[node name="Go back" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 80.0
margin_bottom = 95.0
focus_neighbour_bottom = NodePath("../Fullscreen")
theme = SubResource( 7 )
custom_fonts/font = SubResource( 2 )
text = "Go Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/KeyBinds" to="." method="_on_KeyBinds_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Go back" to="." method="_on_Go_back_pressed"]
